--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -55,50 +55,50 @@
 \newpage
 \chapter{Core modules}
 
-\section{\eslmod{esl\_alphabet}: digitized biosequences}
+\section{\eslmod{alphabet}: digitized biosequences}
 \input{../esl_alphabet}
 \subsection{Functions in the alphabet module}
 \input{autotext/esl_alphabet_functions}
 
 
 \newpage
-\section{\eslmod{esl\_dirichlet}: Beta, Gamma, Dirichlet densities and priors}
+\section{\eslmod{dirichlet}: Beta, Gamma, Dirichlet densities and priors}
 \input{../esl_dirichlet}
 \subsection{Functions in the dirichlet module}
 \input{autotext/esl_dirichlet_functions}
 
 \newpage
-\section{\eslmod{esl\_dmatrix}: linear algebra for 2D double matrices}
+\section{\eslmod{dmatrix}: linear algebra for 2D double matrices}
 %\input{../esl_dmatrix}
 \subsection{Functions in the dmatrix module}
 \input{autotext/esl_dmatrix_functions}
 
 \newpage
-\section{\eslmod{esl\_fileparser}: token-based data file input}
+\section{\eslmod{fileparser}: token-based data file input}
 \input{../esl_fileparser}
 \subsection{Functions in the fileparser module}
 \input{autotext/esl_fileparser_functions}
 
 \newpage
-\section{\eslmod{esl\_getopts}: command line parsing}
+\section{\eslmod{getopts}: command line parsing}
 \input{../esl_getopts}
 \subsection{Functions in the getopts module}
 \input{autotext/esl_getopts_functions}
 
 \newpage
-\section{\eslmod{esl\_keyhash}: keyword hashing, associative array emulation}
+\section{\eslmod{keyhash}: keyword hashing, associative array emulation}
 \input{../esl_keyhash}
 \subsection{Functions in the keyhash module}
 \input{autotext/esl_keyhash_functions}
 
 \newpage
-\section{\eslmod{esl\_msa}: multiple sequence alignment i/o}
+\section{\eslmod{msa}: multiple sequence alignment i/o}
 \input{../esl_msa}
 \subsection{Functions in the msa module}
 \input{autotext/esl_msa_functions}
 
 \newpage
-\section{\eslmod{esl\_random}: pseudorandom numbers and basic sampling}
+\section{\eslmod{random}: pseudorandom numbers and basic sampling}
 \input{../esl_random}
 \subsection{Functions in the random (rnd) module}
 \input{autotext/esl_random_functions}
@@ -110,43 +110,43 @@
 \end{quote}     
 
 \newpage
-\section{\eslmod{esl\_regexp}: regular expression matching}
+\section{\eslmod{regexp}: regular expression matching}
 \input{../esl_regexp}
 \subsection{Functions in the regexp module}
 \input{autotext/esl_regexp_functions}
 
 \newpage
-\section{\eslmod{esl\_sqio}: i/o of unaligned sequence files}
+\section{\eslmod{sqio}: i/o of unaligned sequence files}
 \input{../esl_sqio}
 \subsection{Functions in the sqio module}
 \input{autotext/esl_sqio_functions}
 
 \newpage
-\section{\eslmod{esl\_ssi}: indexing database flatfiles for fast record retrieval}
+\section{\eslmod{ssi}: indexing database flatfiles for fast record retrieval}
 \input{../esl_ssi}
 \subsection{Functions in the ssi module}
 \input{autotext/esl_ssi_functions}
 
 \newpage
-\section{\eslmod{esl\_stack}: pushdown stacks for integers, chars, and pointers}
+\section{\eslmod{stack}: pushdown stacks for integers, chars, and pointers}
 \input{../esl_stack}
 \subsection{Functions in the stack module}
 \input{autotext/esl_stack_functions}
 
 \newpage
-\section{\eslmod{esl\_stopwatch}: timing parts of programs}
+\section{\eslmod{stopwatch}: timing parts of programs}
 \input{../esl_stopwatch}
 \subsection{Functions in the stopwatch module}
 \input{autotext/esl_stopwatch_functions}
 
 \newpage
-\section{\eslmod{esl\_vectorops}: simple vector operations}
+\section{\eslmod{vectorops}: simple vector operations}
 \input{../esl_vectorops}
 \subsection{Functions in the vectorops module}
 \input{autotext/esl_vectorops_functions}
 
 \newpage
-\section{\eslmod{esl\_wuss}: RNA secondary structure annotation}
+\section{\eslmod{wuss}: RNA secondary structure annotation}
 \input{../esl_wuss}
 \subsection{Functions in the wuss module}
 \input{autotext/esl_wuss_functions}
@@ -157,61 +157,61 @@
 \input{statistics}
 
 \newpage
-\section{\eslmod{esl\_histogram}: Collecting histograms}
+\section{\eslmod{histogram}: Collecting histograms}
 \input{../esl_histogram}
 \subsection{Functions in the histogram module}
 \input{autotext/esl_histogram_functions}
 
 \newpage
-\section{\eslmod{esl\_exponential}: Exponential distributions}
+\section{\eslmod{exponential}: Exponential distributions}
 \input{../esl_exponential}
 \subsection{Functions in the exponential module}
 \input{autotext/esl_exponential_functions}
 
 \newpage
-\section{\eslmod{esl\_gamma}: Gamma distributions}
+\section{\eslmod{gamma}: Gamma distributions}
 \input{../esl_gamma}
 \subsection{Functions in the gamma module}
 \input{autotext/esl_gamma_functions}
 
 \newpage
-\section{\eslmod{esl\_gev}: Generalized extreme value distributions}
+\section{\eslmod{gev}: Generalized extreme value distributions}
 \input{../esl_gev}
 \subsection{Functions in the gev module}
 \input{autotext/esl_gev_functions}
 
 \newpage
-\section{\eslmod{esl\_gumbel}: Type I extreme value (Gumbel) statistics}
+\section{\eslmod{gumbel}: Type I extreme value (Gumbel) statistics}
 \input{../esl_gumbel}
 \subsection{Functions in the gumbel module}
 \input{autotext/esl_gumbel_functions}
 
 \newpage
-\section{\eslmod{esl\_hyperexp}: Hyperexponential distributions}
+\section{\eslmod{hyperexp}: Hyperexponential distributions}
 \input{../esl_hyperexp}
 \subsection{Functions in the hyperexp module}
 \input{autotext/esl_hyperexp_functions}
 
 \newpage
-\section{\eslmod{esl\_mixdchlet}: Mixture Dirichlet distributions}
+\section{\eslmod{mixdchlet}: Mixture Dirichlet distributions}
 %\input{../esl_mixdchlet}
 \subsection{Functions in the mixdchlet module}
 %\input{autotext/esl_mixdchlet_functions}
 
 \newpage
-\section{\eslmod{esl\_mixgev}: Mixture generalized extreme value distributions}
+\section{\eslmod{mixgev}: Mixture generalized extreme value distributions}
 %\input{../esl_mixgev}
 \subsection{Functions in the mixgev module}
 \input{autotext/esl_mixgev_functions}
 
 \newpage
-\section{\eslmod{esl\_stretchexp}: Stretched exponential distributions}
+\section{\eslmod{stretchexp}: Stretched exponential distributions}
 \input{../esl_stretchexp}
 \subsection{Functions in the stretchexp module}
 \input{autotext/esl_stretchexp_functions}
 
 \newpage
-\section{\eslmod{esl\_weibull}: Weibull distributions}
+\section{\eslmod{weibull}: Weibull distributions}
 \input{../esl_weibull}
 \subsection{Functions in the weibull module}
 \input{autotext/esl_weibull_functions}
