--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -60,7 +60,6 @@
 \subsection{Functions in the alphabet module}
 \input{autotext/esl_alphabet_functions}
 
-
 \newpage
 \section{\eslmod{dirichlet}: Beta, Gamma, Dirichlet densities and priors}
 \input{../esl_dirichlet}
@@ -152,8 +151,34 @@
 \input{autotext/esl_wuss_functions}
 
 
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\chapter{Phylogenetic inference modules}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \newpage
+\section{\eslmod{tree}: Phylogenetic trees}
+\input{../esl_tree}
+\subsection{Functions in the tree module}
+\input{autotext/esl_tree_functions}
+
+\newpage
+\section{\eslmod{distance}: Distance calculations}
+\input{../esl_distance}
+\subsection{Functions in the distance module}
+\input{autotext/esl_distance_functions}
+
+
+
+
+
+
+\newpage
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Statistics modules}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \input{statistics}
 
 \newpage
