--- a/esl_msa.tex
+++ b/esl_msa.tex
@@ -71,8 +71,8 @@ accelerating indexing of some internal data structures.
 \end{tabular}
 }
 \end{center}
-\caption{The \eslmod{msa} API. Requires: \eslmod{easel},
-\eslmod{msa}. Optional augmentation: \eslmod{alphabet},
+\caption{The \eslmod{msa} API. Requires: \eslmod{easel}.
+Optional augmentation: \eslmod{alphabet},
 \eslmod{keyhash}, \eslmod{ssi}.}
 \label{tbl:msa_api}
 \end{table}
