--- a/esl_sqio.tex
+++ b/esl_sqio.tex
@@ -39,7 +39,7 @@ contains information for a single sequence.
 \ccode{esl\_sqio\_Write()}        & Writes a sequence to an open stream.\\
 \ccode{esl\_sqio\_WhatFormat()}   & Autodetects format of an open (rewindable) stream.\\
 \ccode{esl\_sqio\_FormatCode()}   & Converts format string to internal code.\\
-\ccode{esl\_sqio\_FormatString()} & Converts format code to string.\\
+\ccode{esl\_sqio\_DescribeFormat()} & Converts format code to string.\\
 \ccode{esl\_sqio\_IsAlignment()}  & Checks if a code is alignment file fmt.\\
 \ccode{esl\_sqio\_Position()}     & Use offset to move to a specific sequence.\\
 \ccode{esl\_sqio\_Rewind()}       & Rewind sequence file to beginning.\\\hline
