--- a/documentation/intro.tex
+++ b/documentation/intro.tex
@@ -2,17 +2,16 @@
 
 
 
-Easel is a C code library for bioinformatics applications. It
-underlies some of the software packages from the Eddy lab, including
-HMMER and Infernal, the software engines that the Pfam and Rfam
-protein and RNA family databases rely on. Easel organizes a body of my
-work in what I hope is a useful form, so that new people in my lab can
-avoid reinventing the wheel as many times as I have. Perhaps it will
-also be useful to you.
+Easel is a C code library for bioinformatics applications.  Some of
+the Eddy lab's software packages depend on Easel, including HMMER and
+Infernal, the software engines that the Pfam and Rfam protein and RNA
+family databases rely on. Easel organizes a body of my work in what I
+hope is a useful form, so that new people in my lab can avoid
+reinventing the wheel as many times as I have. Perhaps it will also be
+useful to you.
 
-Easel is designed so that it can be used quickly and easily. It is
-\textbf{documented} with tutorial examples that are intended to make
-it easy to get started with any given Easel module. It is
+Easel is \textbf{documented} with tutorial examples that are intended
+to make it easy to get started with any given Easel module. It is
 \textbf{modular}, to help you extract individual files or functions
 for use in your own code, without having to disentangle the entire
 library. It is \textbf{freely distributed} as open source so that you
@@ -61,11 +60,9 @@ searching the \ccode{esl\_foo.c} file for the tag
 You might need to replace the standard \ccode{cc} with a different
 compiler name, depending on your system. Linking to the standard math
 library (\ccode{-lm}) may not be necessary, depending on what module
-you're compiling, but it won't hurt. The \ccode{-L.} and \ccode{-I.}
-options say that the library and the include files are in the current
-working directory (because you haven't installed them). Replace
-\ccode{foo} with the name of a module you want to play with, and you
-can compile any of Easel's example drivers this way.
+you're compiling, but it won't hurt. Replace \ccode{foo} with the name
+of a module you want to play with, and you can compile any of Easel's
+example drivers this way.
 
 To run it, read the source code to see if it needs any command line
 arguments, like the name of a file to open, then:
@@ -139,6 +136,11 @@ common multiple alignment formats.
   \multicolumn{2}{c}{\textbf{Numerical computing group:}}\\
 %
 \eslmod{minimizer}       & Multidimensional optimization          \\
+%
+  \multicolumn{2}{c}{\textbf{Phylogeny group:}}\\
+%
+\eslmod{tree}         & Phylogenetic trees                   \\
+\eslmod{distance}     & Phylogenetic distance calculations   \\
 %
   \multicolumn{2}{c}{\textbf{Statistics group:}}             \\
 %
@@ -538,11 +540,35 @@ not exercise SSI augmentations yet.}
 
 \item Each function, procedure, and macro in the exposed API shall
       have a unit test procedure. A unit test for
-      \ccode{esl\_foo\_Baz()} is named (\ccode{static int
+      \ccode{esl\_foo\_Baz()} is named \ccode{static int
       utest\_Baz()}. A unit test returns \ccode{eslOK} on success.  On
       detecting a failure, a unit test should call \ccode{abort()}
       immediately to facilitate tracing/debugging; less preferably, a
       unit test may return \ccode{eslFAIL} to the main test driver.
+
+\item If a unit test or testdriver needs to create a temporary file
+      (to test i/o), the tmpfile is created with
+      \ccode{esl\_tmpfile()}:
+
+\begin{cchunk}
+          char  tmpfile[] = "/tmp/eslXXXXXX";
+          FILE *fp;
+
+          if (esl_tmpfile(tmpfile, &fp) != eslOK) abort();
+          write_stuff_to(fp);
+          fclose(fp);
+
+          if ((fp = fopen(tmpfile)) == NULL)      abort();
+          read_stuff_from(fp);
+          fclose(fp);
+
+          remove(tmpfile);
+\end{cchunk}
+
+      Thus tmp files created by Easel's test suite have a common
+      naming convention and exist in a common place. On a test
+      failure, the tmp file remains, to assist debugging; on a test
+      success, the tmp file is removed.
 
 \item The testdriver shall respond to a \ccode{eslTEST\_THROWING}
       compile-time definition by registering a nonfatal error handler,
